# CompetitorTracker

./: .replit  README.md  app.py  config.py  dashboard.py  database.py  demo_fallback.py  diff_checker.py  notifier.py  pyproject.toml  replit.md  requirements.txt  scraper.py  summarizer.py  test_fallback.py
attached_assets/: _1753080087562.replit  app_1753080087563.py  config_1753080087564.py  dashboard_1753080087564.py  database_1753080087565.py  diff_checker_1753080087565.py  notifier_1753080087566.py  replit_1753080087567.md  scraper_1753080087568.py  summarizer_1753080087568.py  utils_1753080087569.py
